# QTNMSim

./: CMakeLists.txt  README.md  allcommands.mac  qtnmSim.cc
.github/workflows/: BuildandTest.yml  CI.yml
example_input/: example0.mac  example2.mac  test.gdml  test3.mac
examples/: scattering.cc  scattering.mac
examples/include/: SCActionInitialization.hh  SCDetectorConstruction.hh  SCPhysicsList.hh  SCPrimaryGeneratorAction.hh  SCRun.hh  SCRunAction.hh  SCSteppingAction.hh
examples/src/: SCActionInitialization.cc  SCDetectorConstruction.cc  SCPhysicsList.cc  SCPrimaryGeneratorAction.cc  SCRun.cc  SCRunAction.cc  SCSteppingAction.cc
geometry/: BespokeMag.py  QMaterials.py  testscript.py
include/: BorisStepperRadiation.hh  NAEventAction.hh  NAOutputManager.hh  NARunAction.hh  NATrackingAction.hh  NATrajectory.hh  QTActionInitialization.hh  QTBorisDriver.hh  QTBorisDriver.icc  QTBorisScheme.hh  QTBorisScheme.icc  QTComsolField.hh  QTDetectorConstruction.hh  QTEquationOfMotion.hh  QTEventAction.hh  QTFieldMessenger.hh  QTGasHit.hh  QTGasSD.hh  QTLarmorEMField.hh  QTLarmorUniField.hh  QTMagneticFieldSetup.hh  QTMagneticTrap.hh  QTMultiModel.hh  QTNMElasticModel.hh  QTNMeImpactIonisation.hh  QTOutputManager.hh  QTPrimaryGeneratorAction.hh  QTRunAction.hh  QTStackingAction.hh  QTTrackingAction.hh  QTTrajectory.hh  QTeDPWACoulombScatteringModel.hh  TBetaGenerator.hh
include/utils/: kdtree.hh  streams.hh
src/: BorisStepper.cc  BorisStepperRadiation.cc  NAEventAction.cc  NAOutputManager.cc  NARunAction.cc  NATrackingAction.cc  NATrajectory.cc  QTActionInitialization.cc  QTBorisDriver.cc  QTBorisScheme.cc  QTComsolField.cc  QTDetectorConstruction.cc  QTEquationOfMotion.cc  QTEventAction.cc  QTFieldMessenger.cc  QTGasHit.cc  QTGasSD.cc  QTLarmorEMField.cc  QTLarmorUniField.cc  QTMagneticFieldSetup.cc  QTMagneticTrap.cc  QTMultiModel.cc  QTNMElasticModel.cc  QTNMPhysicsList.cc  QTNMeImpactIonisation.cc  QTOutputManager.cc  QTPrimaryGeneratorAction.cc  QTRunAction.cc  QTStackingAction.cc  QTTrackingAction.cc  QTTrajectory.cc  QTeDPWACoulombScatteringModel.cc  gzip_streambuf.cc
test/: high_density.gdml  high_density.mac  test.gdml  test0.mac  test1.mac  test2.mac  test3.mac
test/Test0/: CMakeLists.txt  README.md  TestEm0.cc  TestEm0.in  shah1987.txt  test0.py
test/Test0/include/: ElasticScatteringList.hh  MultipleScatteringList.hh  PrimaryGeneratorAction.hh  RunAction.hh
test/Test0/src/: DetectorConstruction.cc  ElasticScattering.cc  InelasticScattering.cc  MultipleScattering.cc  RunAction.cc
test/Test1/: CMakeLists.txt  README.md  TestEm1.cc  TestEm1.in  test1.py
test/Test1/include/: ActionInitialization.hh  DetectorConstruction.hh  InelasticScatteringList.hh  Run.hh  RunAction.hh  SteppingAction.hh
test/Test1/src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc
utils/: analyse.C  collisions.py  plot_example0.py  recon.C
